--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     background-color: #b8c6db;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7f7 100%);
+    background-image: linear-gradient(315deg, rgb(22, 22, 22) 0%, #f5f7f7 100%);
     font-family: 'Poppins', sans-serif;
     display:flex;
     justify-content: center;
@@ -14,6 +14,23 @@ body{
     height:100vh;
     margin:0;
     overflow: hidden;
+}
+
+/* firstPage-styling*/ 
+.button-container h3{
+   margin-bottom:30px;
+   letter-spacing: 1em;
+   font-size: 22px;
+}
+
+.button-container #to-quiz{
+    background-image: linear-gradient(to right,rgb(149, 148, 148) 20%, #3e5659 , rgb(33, 32, 32));
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.button-container #to-quiz:hover{
+    background-image: linear-gradient(to left, rgb(130, 130, 226), rgb(196, 186, 186));
 }
 
 .quiz-container{
